TP4/obj/analizador.output
Terminals unused in grammar

   FLECHA
   ESPECIFICADOR_CLASE_ALMACENAMIENTO
   CALIFICADOR_DE_TIPO
   STRUCT_O_UNION
   ENUM
   CASE
   DEFAULT
   CONTINUE
   BREAK


Estado 7 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 25 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 146 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 154 conflictos: 23 reducción(ones)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: declaracion '\n'
    4     | sentencia '\n'
    5     | errorLexico '\n'
    6     | error '\n'

    7 errorLexico: ERRORLEX
    8            | errorLexico ERRORLEX

    9 expresion: expAsignacion

   10 expAsignacion: expCondicional
   11              | expUnaria OPERADOR_ASIGNACION expAsignacion

   12 expCondicional: expOr
   13               | expOr '?' expresion ':' expCondicional

   14 expOr: expAnd
   15      | expOr OPERADOR_O_LOGICO expAnd

   16 expAnd: expIgualdad
   17       | expAnd OPERADOR_Y_LOGICO expIgualdad

   18 expIgualdad: expRelacional
   19            | expIgualdad COMPARADOR_IGUALDAD expRelacional

   20 expRelacional: expAditiva
   21              | expRelacional OPERADOR_RELACION expAditiva

   22 expAditiva: expMultiplicativa
   23           | expAditiva operAditivo expMultiplicativa

   24 operAditivo: '+'
   25            | '-'

   26 expMultiplicativa: expUnaria
   27                  | expMultiplicativa operMultiplicativo expUnaria

   28 operMultiplicativo: '*'
   29                   | '/'

   30 expUnaria: expPostfijo
   31          | OPERADOR_INCREMENTO expUnaria
   32          | operUnario expUnaria
   33          | SIZE_OF '(' TIPO_DATO ')'

   34 operUnario: '*'
   35           | '&'
   36           | '-'
   37           | '!'

   38 expPostfijo: expPrimaria
   39            | expPostfijo '[' expresion ']'
   40            | expPostfijo '(' opcionListaArgumentos ')'

   41 opcionListaArgumentos: /* vacío */
   42                      | expAsignacion
   43                      | opcionListaArgumentos ',' expAsignacion

   44 expPrimaria: IDENTIFICADOR
   45            | constante
   46            | LITERAL_CADENA
   47            | '(' expresion ')'

   48 constante: CONSTANTE_ENTERA
   49          | CONSTANTE_REAL
   50          | CONSTANTE_CARACTER

   51 declaracion: declaracionVariablesSimples
   52            | declaracionFunciones
   53            | definicionFunciones

   54 declaracionVariablesSimples: TIPO_DATO listaVariablesSimples ';'

   55 listaVariablesSimples: variableSimple
   56                      | listaVariablesSimples ',' variableSimple

   57 variableSimple: IDENTIFICADOR opcionInicializacion

   58 opcionInicializacion: /* vacío */
   59                     | OPERADOR_ASIGNACION expCondicional

   60 declaracionFunciones: TIPO_DATO IDENTIFICADOR '(' opcionArgumentosConTipo ')' ';'

   61 opcionArgumentosConTipo: /* vacío */
   62                        | TIPO_DATO opcionReferencia IDENTIFICADOR
   63                        | TIPO_DATO opcionReferencia IDENTIFICADOR ',' argumentosConTipo

   64 argumentosConTipo: TIPO_DATO opcionReferencia IDENTIFICADOR
   65                  | TIPO_DATO opcionReferencia IDENTIFICADOR ',' argumentosConTipo

   66 opcionReferencia: /* vacío */
   67                 | '&'

   68 definicionFunciones: TIPO_DATO IDENTIFICADOR '(' opcionArgumentosConTipo ')' sentencia

   69 sentencia: sentenciaExpresion
   70          | sentenciaCompuesta
   71          | sentenciaDeSeleccion
   72          | sentenciaDeIteracion
   73          | sentenciaDeSalto
   74          | invocacionDeFuncion

   75 sentenciaCompuesta: '{' opcionListaDeclaraciones opcionListaSentencias '}'

   76 opcionListaDeclaraciones: /* vacío */
   77                         | declaracion
   78                         | opcionListaDeclaraciones declaracion

   79 listaSentencias: sentencia
   80                | listaSentencias sentencia

   81 opcionListaSentencias: /* vacío */
   82                      | sentencia
   83                      | listaSentencias sentencia

   84 sentenciaExpresion: ';'
   85                   | expresion ';'

   86 sentenciaDeSeleccion: IF '(' expresion ')' sentencia
   87                     | IF '(' expresion ')' sentencia ELSE sentencia
   88                     | SWITCH '(' expresion ')' sentencia

   89 sentenciaDeIteracion: WHILE '(' expresion ')' sentencia
   90                     | DO sentencia WHILE '(' expresion ')' ';'
   91                     | FOR '(' opcionExpresion ';' opcionExpresion ';' opcionExpresion ')' sentencia

   92 sentenciaDeSalto: RETURN opcionExpresion ';'

   93 opcionExpresion: /* vacío */
   94                | expresion

   95 invocacionDeFuncion: IDENTIFICADOR '(' listaArgumentos ')'

   96 listaArgumentos: argumento
   97                | listaArgumentos ',' argumento

   98 argumento: /* vacío */
   99          | IDENTIFICADOR


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 5 6
'!' (33) 37
'&' (38) 35 67
'(' (40) 33 40 47 60 68 86 87 88 89 90 91 95
')' (41) 33 40 47 60 68 86 87 88 89 90 91 95
'*' (42) 28 34
'+' (43) 24
',' (44) 43 56 63 65 97
'-' (45) 25 36
'/' (47) 29
':' (58) 13
';' (59) 54 60 84 85 90 91 92
'?' (63) 13
'[' (91) 39
']' (93) 39
'{' (123) 75
'}' (125) 75
error (256) 6
CONSTANTE_ENTERA (258) 48
CONSTANTE_REAL (259) 49
CONSTANTE_CARACTER (260) 50
IDENTIFICADOR (261) 44 57 60 62 63 64 65 68 95 99
LITERAL_CADENA (262) 46
OPERADOR_ASIGNACION (263) 11 59
OPERADOR_O_LOGICO (264) 15
OPERADOR_Y_LOGICO (265) 17
COMPARADOR_IGUALDAD (266) 19
OPERADOR_RELACION (267) 21
OPERADOR_INCREMENTO (268) 31
SIZE_OF (269) 33
FLECHA (270)
ESPECIFICADOR_CLASE_ALMACENAMIENTO (271)
TIPO_DATO (272) 33 54 60 62 63 64 65 68
CALIFICADOR_DE_TIPO (273)
STRUCT_O_UNION (274)
ENUM (275)
IF (276) 86 87
ELSE (277) 87
SWITCH (278) 88
WHILE (279) 89 90
DO (280) 90
FOR (281) 91
CASE (282)
DEFAULT (283)
CONTINUE (284)
BREAK (285)
RETURN (286) 92
ERRORLEX (287) 7 8


No terminales con las reglas donde aparecen

$accept (50)
    en la izquierda: 0
input (51)
    en la izquierda: 1 2, en la derecha: 0 2
line (52)
    en la izquierda: 3 4 5 6, en la derecha: 2
errorLexico (53)
    en la izquierda: 7 8, en la derecha: 5 8
expresion (54)
    en la izquierda: 9, en la derecha: 13 39 47 85 86 87 88 89 90 94
expAsignacion (55)
    en la izquierda: 10 11, en la derecha: 9 11 42 43
expCondicional (56)
    en la izquierda: 12 13, en la derecha: 10 13 59
expOr (57)
    en la izquierda: 14 15, en la derecha: 12 13 15
expAnd (58)
    en la izquierda: 16 17, en la derecha: 14 15 17
expIgualdad (59)
    en la izquierda: 18 19, en la derecha: 16 17 19
expRelacional (60)
    en la izquierda: 20 21, en la derecha: 18 19 21
expAditiva (61)
    en la izquierda: 22 23, en la derecha: 20 21 23
operAditivo (62)
    en la izquierda: 24 25, en la derecha: 23
expMultiplicativa (63)
    en la izquierda: 26 27, en la derecha: 22 23 27
operMultiplicativo (64)
    en la izquierda: 28 29, en la derecha: 27
expUnaria (65)
    en la izquierda: 30 31 32 33, en la derecha: 11 26 27 31 32
operUnario (66)
    en la izquierda: 34 35 36 37, en la derecha: 32
expPostfijo (67)
    en la izquierda: 38 39 40, en la derecha: 30 39 40
opcionListaArgumentos (68)
    en la izquierda: 41 42 43, en la derecha: 40 43
expPrimaria (69)
    en la izquierda: 44 45 46 47, en la derecha: 38
constante (70)
    en la izquierda: 48 49 50, en la derecha: 45
declaracion (71)
    en la izquierda: 51 52 53, en la derecha: 3 77 78
declaracionVariablesSimples (72)
    en la izquierda: 54, en la derecha: 51
listaVariablesSimples (73)
    en la izquierda: 55 56, en la derecha: 54 56
variableSimple (74)
    en la izquierda: 57, en la derecha: 55 56
opcionInicializacion (75)
    en la izquierda: 58 59, en la derecha: 57
declaracionFunciones (76)
    en la izquierda: 60, en la derecha: 52
opcionArgumentosConTipo (77)
    en la izquierda: 61 62 63, en la derecha: 60 68
argumentosConTipo (78)
    en la izquierda: 64 65, en la derecha: 63 65
opcionReferencia (79)
    en la izquierda: 66 67, en la derecha: 62 63 64 65
definicionFunciones (80)
    en la izquierda: 68, en la derecha: 53
sentencia (81)
    en la izquierda: 69 70 71 72 73 74, en la derecha: 4 68 79 80 82
    83 86 87 88 89 90 91
sentenciaCompuesta (82)
    en la izquierda: 75, en la derecha: 70
opcionListaDeclaraciones (83)
    en la izquierda: 76 77 78, en la derecha: 75 78
listaSentencias (84)
    en la izquierda: 79 80, en la derecha: 80 83
opcionListaSentencias (85)
    en la izquierda: 81 82 83, en la derecha: 75
sentenciaExpresion (86)
    en la izquierda: 84 85, en la derecha: 69
sentenciaDeSeleccion (87)
    en la izquierda: 86 87 88, en la derecha: 71
sentenciaDeIteracion (88)
    en la izquierda: 89 90 91, en la derecha: 72
sentenciaDeSalto (89)
    en la izquierda: 92, en la derecha: 73
opcionExpresion (90)
    en la izquierda: 93 94, en la derecha: 91 92
invocacionDeFuncion (91)
    en la izquierda: 95, en la derecha: 74
listaArgumentos (92)
    en la izquierda: 96 97, en la derecha: 95 97
argumento (93)
    en la izquierda: 98 99, en la derecha: 96 97


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end                 desplazar e ir al estado 2
    error                desplazar e ir al estado 3
    CONSTANTE_ENTERA     desplazar e ir al estado 4
    CONSTANTE_REAL       desplazar e ir al estado 5
    CONSTANTE_CARACTER   desplazar e ir al estado 6
    IDENTIFICADOR        desplazar e ir al estado 7
    LITERAL_CADENA       desplazar e ir al estado 8
    OPERADOR_INCREMENTO  desplazar e ir al estado 9
    SIZE_OF              desplazar e ir al estado 10
    TIPO_DATO            desplazar e ir al estado 11
    IF                   desplazar e ir al estado 12
    SWITCH               desplazar e ir al estado 13
    WHILE                desplazar e ir al estado 14
    DO                   desplazar e ir al estado 15
    FOR                  desplazar e ir al estado 16
    RETURN               desplazar e ir al estado 17
    ERRORLEX             desplazar e ir al estado 18
    '-'                  desplazar e ir al estado 19
    '*'                  desplazar e ir al estado 20
    '('                  desplazar e ir al estado 21
    '&'                  desplazar e ir al estado 22
    '!'                  desplazar e ir al estado 23
    ';'                  desplazar e ir al estado 24
    '{'                  desplazar e ir al estado 25

    line                         ir al estado 26
    errorLexico                  ir al estado 27
    expresion                    ir al estado 28
    expAsignacion                ir al estado 29
    expCondicional               ir al estado 30
    expOr                        ir al estado 31
    expAnd                       ir al estado 32
    expIgualdad                  ir al estado 33
    expRelacional                ir al estado 34
    expAditiva                   ir al estado 35
    expMultiplicativa            ir al estado 36
    expUnaria                    ir al estado 37
    operUnario                   ir al estado 38
    expPostfijo                  ir al estado 39
    expPrimaria                  ir al estado 40
    constante                    ir al estado 41
    declaracion                  ir al estado 42
    declaracionVariablesSimples  ir al estado 43
    declaracionFunciones         ir al estado 44
    definicionFunciones          ir al estado 45
    sentencia                    ir al estado 46
    sentenciaCompuesta           ir al estado 47
    sentenciaExpresion           ir al estado 48
    sentenciaDeSeleccion         ir al estado 49
    sentenciaDeIteracion         ir al estado 50
    sentenciaDeSalto             ir al estado 51
    invocacionDeFuncion          ir al estado 52


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    6 line: error . '\n'

    '\n'  desplazar e ir al estado 53


estado 4

   48 constante: CONSTANTE_ENTERA .

    $default  reduce usando la regla 48 (constante)


estado 5

   49 constante: CONSTANTE_REAL .

    $default  reduce usando la regla 49 (constante)


estado 6

   50 constante: CONSTANTE_CARACTER .

    $default  reduce usando la regla 50 (constante)


estado 7

   44 expPrimaria: IDENTIFICADOR .
   95 invocacionDeFuncion: IDENTIFICADOR . '(' listaArgumentos ')'

    '('  desplazar e ir al estado 54

    '('       [reduce usando la regla 44 (expPrimaria)]
    $default  reduce usando la regla 44 (expPrimaria)


estado 8

   46 expPrimaria: LITERAL_CADENA .

    $default  reduce usando la regla 46 (expPrimaria)


estado 9

   31 expUnaria: OPERADOR_INCREMENTO . expUnaria

    CONSTANTE_ENTERA     desplazar e ir al estado 4
    CONSTANTE_REAL       desplazar e ir al estado 5
    CONSTANTE_CARACTER   desplazar e ir al estado 6
    IDENTIFICADOR        desplazar e ir al estado 55
    LITERAL_CADENA       desplazar e ir al estado 8
    OPERADOR_INCREMENTO  desplazar e ir al estado 9
    SIZE_OF              desplazar e ir al estado 10
    '-'                  desplazar e ir al estado 19
    '*'                  desplazar e ir al estado 20
    '('                  desplazar e ir al estado 21
    '&'                  desplazar e ir al estado 22
    '!'                  desplazar e ir al estado 23

    expUnaria    ir al estado 56
    operUnario   ir al estado 38
    expPostfijo  ir al estado 39
    expPrimaria  ir al estado 40
    constante    ir al estado 41


estado 10

   33 expUnaria: SIZE_OF . '(' TIPO_DATO ')'

    '('  desplazar e ir al estado 57


estado 11

   54 declaracionVariablesSimples: TIPO_DATO . listaVariablesSimples ';'
   60 declaracionFunciones: TIPO_DATO . IDENTIFICADOR '(' opcionArgumentosConTipo ')' ';'
   68 definicionFunciones: TIPO_DATO . IDENTIFICADOR '(' opcionArgumentosConTipo ')' sentencia

    IDENTIFICADOR  desplazar e ir al estado 58

    listaVariablesSimples  ir al estado 59
    variableSimple         ir al estado 60


estado 12

   86 sentenciaDeSeleccion: IF . '(' expresion ')' sentencia
   87                     | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 61


estado 13

   88 sentenciaDeSeleccion: SWITCH . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 62


estado 14

   89 sentenciaDeIteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 63


estado 15

   90 sentenciaDeIteracion: DO . sentencia WHILE '(' expresion ')' ';'

    CONSTANTE_ENTERA     desplazar e ir al estado 4
    CONSTANTE_REAL       desplazar e ir al estado 5
    CONSTANTE_CARACTER   desplazar e ir al estado 6
    IDENTIFICADOR        desplazar e ir al estado 7
    LITERAL_CADENA       desplazar e ir al estado 8
    OPERADOR_INCREMENTO  desplazar e ir al estado 9
    SIZE_OF              desplazar e ir al estado 10
    IF                   desplazar e ir al estado 12
    SWITCH               desplazar e ir al estado 13
    WHILE                desplazar e ir al estado 14
    DO                   desplazar e ir al estado 15
    FOR                  desplazar e ir al estado 16
    RETURN               desplazar e ir al estado 17
    '-'                  desplazar e ir al estado 19
    '*'                  desplazar e ir al estado 20
    '('                  desplazar e ir al estado 21
    '&'                  desplazar e ir al estado 22
    '!'                  desplazar e ir al estado 23
    ';'                  desplazar e ir al estado 24
    '{'                  desplazar e ir al estado 25

    expresion             ir al estado 28
    expAsignacion         ir al estado 29
    expCondicional        ir al estado 30
    expOr                 ir al estado 31
    expAnd                ir al estado 32
    expIgualdad           ir al estado 33
    expRelacional         ir al estado 34
    expAditiva            ir al estado 35
    expMultiplicativa     ir al estado 36
    expUnaria             ir al estado 37
    operUnario            ir al estado 38
    expPostfijo           ir al estado 39
    expPrimaria           ir al estado 40
    constante             ir al estado 41
    sentencia             ir al estado 64
    sentenciaCompuesta    ir al estado 47
    sentenciaExpresion    ir al estado 48
    sentenciaDeSeleccion  ir al estado 49
    sentenciaDeIteracion  ir al estado 50
    sentenciaDeSalto      ir al estado 51
    invocacionDeFuncion   ir al estado 52


estado 16

   91 sentenciaDeIteracion: FOR . '(' opcionExpresion ';' opcionExpresion ';' opcionExpresion ')' sentencia

    '('  desplazar e ir al estado 65


estado 17

   92 sentenciaDeSalto: RETURN . opcionExpresion ';'

    CONSTANTE_ENTERA     desplazar e ir al estado 4
    CONSTANTE_REAL       desplazar e ir al estado 5
    CONSTANTE_CARACTER   desplazar e ir al estado 6
    IDENTIFICADOR        desplazar e ir al estado 55
    LITERAL_CADENA       desplazar e ir al estado 8
    OPERADOR_INCREMENTO  desplazar e ir al estado 9
    SIZE_OF              desplazar e ir al estado 10
    '-'                  desplazar e ir al estado 19
    '*'                  desplazar e ir al estado 20
    '('                  desplazar e ir al estado 21
    '&'                  desplazar e ir al estado 22
    '!'                  desplazar e ir al estado 23

    $default  reduce usando la regla 93 (opcionExpresion)

    expresion          ir al estado 66
    expAsignacion      ir al estado 29
    expCondicional     ir al estado 30
    expOr              ir al estado 31
    expAnd             ir al estado 32
    expIgualdad        ir al estado 33
    expRelacional      ir al estado 34
    expAditiva         ir al estado 35
    expMultiplicativa  ir al estado 36
    expUnaria          ir al estado 37
    operUnario         ir al estado 38
    expPostfijo        ir al estado 39
    expPrimaria        ir al estado 40
    constante          ir al estado 41
    opcionExpresion    ir al estado 67


estado 18

    7 errorLexico: ERRORLEX .

    $default  reduce usando la regla 7 (errorLexico)


estado 19

   36 operUnario: '-' .

    $default  reduce usando la regla 36 (operUnario)


estado 20

   34 operUnario: '*' .

    $default  reduce usando la regla 34 (operUnario)


estado 21

   47 expPrimaria: '(' . expresion ')'

    CONSTANTE_ENTERA     desplazar e ir al estado 4
    CONSTANTE_REAL       desplazar e ir al estado 5
    CONSTANTE_CARACTER   desplazar e ir al estado 6
    IDENTIFICADOR        desplazar e ir al estado 55
    LITERAL_CADENA       desplazar e ir al estado 8
    OPERADOR_INCREMENTO  desplazar e ir al estado 9
    SIZE_OF              desplazar e ir al estado 10
    '-'                  desplazar e ir al estado 19
    '*'                  desplazar e ir al estado 20
    '('                  desplazar e ir al estado 21
    '&'                  desplazar e ir al estado 22
    '!'                  desplazar e ir al estado 23

    expresion          ir al estado 68
    expAsignacion      ir al estado 29
    expCondicional     ir al estado 30
    expOr              ir al estado 31
    expAnd             ir al estado 32
    expIgualdad        ir al estado 33
    expRelacional      ir al estado 34
    expAditiva         ir al estado 35
    expMultiplicativa  ir al estado 36
    expUnaria          ir al estado 37
    operUnario         ir al estado 38
    expPostfijo        ir al estado 39
    expPrimaria        ir al estado 40
    constante          ir al estado 41


estado 22

   35 operUnario: '&' .

    $default  reduce usando la regla 35 (operUnario)


estado 23

   37 operUnario: '!' .

    $default  reduce usando la regla 37 (operUnario)


estado 24

   84 sentenciaExpresion: ';' .

    $default  reduce usando la regla 84 (sentenciaExpresion)


estado 25

   75 sentenciaCompuesta: '{' . opcionListaDeclaraciones opcionListaSentencias '}'

    TIPO_DATO  desplazar e ir al estado 11

    TIPO_DATO  [reduce usando la regla 76 (opcionListaDeclaraciones)]
    $default   reduce usando la regla 76 (opcionListaDeclaraciones)

    declaracion                  ir al estado 69
    declaracionVariablesSimples  ir al estado 43
    declaracionFunciones         ir al estado 44
    definicionFunciones          ir al estado 45
    opcionListaDeclaraciones     ir al estado 70


estado 26

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 27

    5 line: errorLexico . '\n'
    8 errorLexico: errorLexico . ERRORLEX

    ERRORLEX  desplazar e ir al estado 71
    '\n'      desplazar e ir al estado 72


estado 28

   85 sentenciaExpresion: expresion . ';'

    ';'  desplazar e ir al estado 73


estado 29

    9 expresion: expAsignacion .

    $default  reduce usando la regla 9 (expresion)


estado 30

   10 expAsignacion: expCondicional .

    $default  reduce usando la regla 10 (expAsignacion)


estado 31

   12 expCondicional: expOr .
   13               | expOr . '?' expresion ':' expCondicional
   15 expOr: expOr . OPERADOR_O_LOGICO expAnd

    OPERADOR_O_LOGICO  desplazar e ir al estado 74
    '?'                desplazar e ir al estado 75

    $default  reduce usando la regla 12 (expCondicional)


estado 32

   14 expOr: expAnd .
   17 expAnd: expAnd . OPERADOR_Y_LOGICO expIgualdad

    OPERADOR_Y_LOGICO  desplazar e ir al estado 76

    $default  reduce usando la regla 14 (expOr)


estado 33

   16 expAnd: expIgualdad .
   19 expIgualdad: expIgualdad . COMPARADOR_IGUALDAD expRelacional

    COMPARADOR_IGUALDAD  desplazar e ir al estado 77

    $default  reduce usando la regla 16 (expAnd)


estado 34

   18 expIgualdad: expRelacional .
   21 expRelacional: expRelacional . OPERADOR_RELACION expAditiva

    OPERADOR_RELACION  desplazar e ir al estado 78

    $default  reduce usando la regla 18 (expIgualdad)


estado 35

   20 expRelacional: expAditiva .
   23 expAditiva: expAditiva . operAditivo expMultiplicativa

    '+'  desplazar e ir al estado 79
    '-'  desplazar e ir al estado 80

    $default  reduce usando la regla 20 (expRelacional)

    operAditivo  ir al estado 81


estado 36

   22 expAditiva: expMultiplicativa .
   27 expMultiplicativa: expMultiplicativa . operMultiplicativo expUnaria

    '*'  desplazar e ir al estado 82
    '/'  desplazar e ir al estado 83

    $default  reduce usando la regla 22 (expAditiva)

    operMultiplicativo  ir al estado 84


estado 37

   11 expAsignacion: expUnaria . OPERADOR_ASIGNACION expAsignacion
   26 expMultiplicativa: expUnaria .

    OPERADOR_ASIGNACION  desplazar e ir al estado 85

    $default  reduce usando la regla 26 (expMultiplicativa)


estado 38

   32 expUnaria: operUnario . expUnaria

    CONSTANTE_ENTERA     desplazar e ir al estado 4
    CONSTANTE_REAL       desplazar e ir al estado 5
    CONSTANTE_CARACTER   desplazar e ir al estado 6
    IDENTIFICADOR        desplazar e ir al estado 55
    LITERAL_CADENA       desplazar e ir al estado 8
    OPERADOR_INCREMENTO  desplazar e ir al estado 9
    SIZE_OF              desplazar e ir al estado 10
    '-'                  desplazar e ir al estado 19
    '*'                  desplazar e ir al estado 20
    '('                  desplazar e ir al estado 21
    '&'                  desplazar e ir al estado 22
    '!'                  desplazar e ir al estado 23

    expUnaria    ir al estado 86
    operUnario   ir al estado 38
    expPostfijo  ir al estado 39
    expPrimaria  ir al estado 40
    constante    ir al estado 41


estado 39

   30 expUnaria: expPostfijo .
   39 expPostfijo: expPostfijo . '[' expresion ']'
   40            | expPostfijo . '(' opcionListaArgumentos ')'

    '('  desplazar e ir al estado 87
    '['  desplazar e ir al estado 88

    $default  reduce usando la regla 30 (expUnaria)


estado 40

   38 expPostfijo: expPrimaria .

    $default  reduce usando la regla 38 (expPostfijo)


estado 41

   45 expPrimaria: constante .

    $default  reduce usando la regla 45 (expPrimaria)


estado 42

    3 line: declaracion . '\n'

    '\n'  desplazar e ir al estado 89


estado 43

   51 declaracion: declaracionVariablesSimples .

    $default  reduce usando la regla 51 (declaracion)


estado 44

   52 declaracion: declaracionFunciones .

    $default  reduce usando la regla 52 (declaracion)


estado 45

   53 declaracion: definicionFunciones .

    $default  reduce usando la regla 53 (declaracion)


estado 46

    4 line: sentencia . '\n'

    '\n'  desplazar e ir al estado 90


estado 47

   70 sentencia: sentenciaCompuesta .

    $default  reduce usando la regla 70 (sentencia)


estado 48

   69 sentencia: sentenciaExpresion .

    $default  reduce usando la regla 69 (sentencia)


estado 49

   71 sentencia: sentenciaDeSeleccion .

    $default  reduce usando la regla 71 (sentencia)


estado 50

   72 sentencia: sentenciaDeIteracion .

    $default  reduce usando la regla 72 (sentencia)


estado 51

   73 sentencia: sentenciaDeSalto .

    $default  reduce usando la regla 73 (sentencia)


estado 52

   74 sentencia: invocacionDeFuncion .

    $default  reduce usando la regla 74 (sentencia)


estado 53

    6 line: error '\n' .

    $default  reduce usando la regla 6 (line)


estado 54

   95 invocacionDeFuncion: IDENTIFICADOR '(' . listaArgumentos ')'

    IDENTIFICADOR  desplazar e ir al estado 91

    $default  reduce usando la regla 98 (argumento)

    listaArgumentos  ir al estado 92
    argumento        ir al estado 93


estado 55

   44 expPrimaria: IDENTIFICADOR .

    $default  reduce usando la regla 44 (expPrimaria)


estado 56

   31 expUnaria: OPERADOR_INCREMENTO expUnaria .

    $default  reduce usando la regla 31 (expUnaria)


estado 57

   33 expUnaria: SIZE_OF '(' . TIPO_DATO ')'

    TIPO_DATO  desplazar e ir al estado 94


estado 58

   57 variableSimple: IDENTIFICADOR . opcionInicializacion
   60 declaracionFunciones: TIPO_DATO IDENTIFICADOR . '(' opcionArgumentosConTipo ')' ';'
   68 definicionFunciones: TIPO_DATO IDENTIFICADOR . '(' opcionArgumentosConTipo ')' sentencia

    OPERADOR_ASIGNACION  desplazar e ir al estado 95
    '('                  desplazar e ir al estado 96

    $default  reduce usando la regla 58 (opcionInicializacion)

    opcionInicializacion  ir al estado 97


estado 59

   54 declaracionVariablesSimples: TIPO_DATO listaVariablesSimples . ';'
   56 listaVariablesSimples: listaVariablesSimples . ',' variableSimple

    ','  desplazar e ir al estado 98
    ';'  desplazar e ir al estado 99


estado 60

   55 listaVariablesSimples: variableSimple .

    $default  reduce usando la regla 55 (listaVariablesSimples)


estado 61

   86 sentenciaDeSeleccion: IF '(' . expresion ')' sentencia
   87                     | IF '(' . expresion ')' sentencia ELSE sentencia

    CONSTANTE_ENTERA     desplazar e ir al estado 4
    CONSTANTE_REAL       desplazar e ir al estado 5
    CONSTANTE_CARACTER   desplazar e ir al estado 6
    IDENTIFICADOR        desplazar e ir al estado 55
    LITERAL_CADENA       desplazar e ir al estado 8
    OPERADOR_INCREMENTO  desplazar e ir al estado 9
    SIZE_OF              desplazar e ir al estado 10
    '-'                  desplazar e ir al estado 19
    '*'                  desplazar e ir al estado 20
    '('                  desplazar e ir al estado 21
    '&'                  desplazar e ir al estado 22
    '!'                  desplazar e ir al estado 23

    expresion          ir al estado 100
    expAsignacion      ir al estado 29
    expCondicional     ir al estado 30
    expOr              ir al estado 31
    expAnd             ir al estado 32
    expIgualdad        ir al estado 33
    expRelacional      ir al estado 34
    expAditiva         ir al estado 35
    expMultiplicativa  ir al estado 36
    expUnaria          ir al estado 37
    operUnario         ir al estado 38
    expPostfijo        ir al estado 39
    expPrimaria        ir al estado 40
    constante          ir al estado 41


estado 62

   88 sentenciaDeSeleccion: SWITCH '(' . expresion ')' sentencia

    CONSTANTE_ENTERA     desplazar e ir al estado 4
    CONSTANTE_REAL       desplazar e ir al estado 5
    CONSTANTE_CARACTER   desplazar e ir al estado 6
    IDENTIFICADOR        desplazar e ir al estado 55
    LITERAL_CADENA       desplazar e ir al estado 8
    OPERADOR_INCREMENTO  desplazar e ir al estado 9
    SIZE_OF              desplazar e ir al estado 10
    '-'                  desplazar e ir al estado 19
    '*'                  desplazar e ir al estado 20
    '('                  desplazar e ir al estado 21
    '&'                  desplazar e ir al estado 22
    '!'                  desplazar e ir al estado 23

    expresion          ir al estado 101
    expAsignacion      ir al estado 29
    expCondicional     ir al estado 30
    expOr              ir al estado 31
    expAnd             ir al estado 32
    expIgualdad        ir al estado 33
    expRelacional      ir al estado 34
    expAditiva         ir al estado 35
    expMultiplicativa  ir al estado 36
    expUnaria          ir al estado 37
    operUnario         ir al estado 38
    expPostfijo        ir al estado 39
    expPrimaria        ir al estado 40
    constante          ir al estado 41


estado 63

   89 sentenciaDeIteracion: WHILE '(' . expresion ')' sentencia

    CONSTANTE_ENTERA     desplazar e ir al estado 4
    CONSTANTE_REAL       desplazar e ir al estado 5
    CONSTANTE_CARACTER   desplazar e ir al estado 6
    IDENTIFICADOR        desplazar e ir al estado 55
    LITERAL_CADENA       desplazar e ir al estado 8
    OPERADOR_INCREMENTO  desplazar e ir al estado 9
    SIZE_OF              desplazar e ir al estado 10
    '-'                  desplazar e ir al estado 19
    '*'                  desplazar e ir al estado 20
    '('                  desplazar e ir al estado 21
    '&'                  desplazar e ir al estado 22
    '!'                  desplazar e ir al estado 23

    expresion          ir al estado 102
    expAsignacion      ir al estado 29
    expCondicional     ir al estado 30
    expOr              ir al estado 31
    expAnd             ir al estado 32
    expIgualdad        ir al estado 33
    expRelacional      ir al estado 34
    expAditiva         ir al estado 35
    expMultiplicativa  ir al estado 36
    expUnaria          ir al estado 37
    operUnario         ir al estado 38
    expPostfijo        ir al estado 39
    expPrimaria        ir al estado 40
    constante          ir al estado 41


estado 64

   90 sentenciaDeIteracion: DO sentencia . WHILE '(' expresion ')' ';'

    WHILE  desplazar e ir al estado 103


estado 65

   91 sentenciaDeIteracion: FOR '(' . opcionExpresion ';' opcionExpresion ';' opcionExpresion ')' sentencia

    CONSTANTE_ENTERA     desplazar e ir al estado 4
    CONSTANTE_REAL       desplazar e ir al estado 5
    CONSTANTE_CARACTER   desplazar e ir al estado 6
    IDENTIFICADOR        desplazar e ir al estado 55
    LITERAL_CADENA       desplazar e ir al estado 8
    OPERADOR_INCREMENTO  desplazar e ir al estado 9
    SIZE_OF              desplazar e ir al estado 10
    '-'                  desplazar e ir al estado 19
    '*'                  desplazar e ir al estado 20
    '('                  desplazar e ir al estado 21
    '&'                  desplazar e ir al estado 22
    '!'                  desplazar e ir al estado 23

    $default  reduce usando la regla 93 (opcionExpresion)

    expresion          ir al estado 66
    expAsignacion      ir al estado 29
    expCondicional     ir al estado 30
    expOr              ir al estado 31
    expAnd             ir al estado 32
    expIgualdad        ir al estado 33
    expRelacional      ir al estado 34
    expAditiva         ir al estado 35
    expMultiplicativa  ir al estado 36
    expUnaria          ir al estado 37
    operUnario         ir al estado 38
    expPostfijo        ir al estado 39
    expPrimaria        ir al estado 40
    constante          ir al estado 41
    opcionExpresion    ir al estado 104


estado 66

   94 opcionExpresion: expresion .

    $default  reduce usando la regla 94 (opcionExpresion)


estado 67

   92 sentenciaDeSalto: RETURN opcionExpresion . ';'

    ';'  desplazar e ir al estado 105


estado 68

   47 expPrimaria: '(' expresion . ')'

    ')'  desplazar e ir al estado 106


estado 69

   77 opcionListaDeclaraciones: declaracion .

    $default  reduce usando la regla 77 (opcionListaDeclaraciones)


estado 70

   75 sentenciaCompuesta: '{' opcionListaDeclaraciones . opcionListaSentencias '}'
   78 opcionListaDeclaraciones: opcionListaDeclaraciones . declaracion
